--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4712,5 +4712,21 @@ input, select, textarea {
 	margin-top: -20px;
 }
 
+img {
+	max-width: 100%;
+	height: auto;
+}
+.container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.container > div {
+    flex: 1 0 200px; /* flex-grow | flex-shrink | flex-basis */
+}
+@media (min-width: 768px) {
+    .container > div {
+        flex: 1 0 100px;
+    }
+}
 
 
