--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4687,13 +4687,21 @@ input, select, textarea {
 		}
 
 	}
-
 .round-img {
 	width: 50px; /* adjust size as needed */
-	height: 1000px; /* adjust size as needed */
-	border-radius: 100%;
+	height: 50px; /* adjust size as needed */
+	border-radius: 50%;
 	object-fit: cover; /* this ensures that the image scales properly */
 }
+
+/* On screens that are 768px or less, set the image size to be smaller */
+@media screen and (max-width: 768px) {
+	.round-img {
+		width: 30px; /* adjust size as needed */
+		height: 30px; /* adjust size as needed */
+	}
+}
+
 
 .centered-text {
 	text-align: center;
@@ -4712,21 +4720,6 @@ input, select, textarea {
 	margin-top: -20px;
 }
 
-img {
-	max-width: 100%;
-	height: auto;
-}
-.container {
-    display: flex;
-    flex-wrap: wrap;
-}
-.container > div {
-    flex: 1 0 200px; /* flex-grow | flex-shrink | flex-basis */
-}
-@media (min-width: 768px) {
-    .container > div {
-        flex: 1 0 100px;
-    }
-}
+
 
 
